--- a/src/public/views/index.html
+++ b/src/public/views/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/index.css">
-    <script src="../scripts/index.ts"></script>
     <title>PlusPedidos</title>
 </head>
 <body>
@@ -25,4 +24,5 @@
         </div>
     </div>
 </body>
+<script type= "text/javascript" src="../dist/bundle.js"></script>
 </html>
