--- a/src/public/views/index.html
+++ b/src/public/views/index.html
@@ -8,11 +8,11 @@
     <title>PlusPedidos</title>
 </head>
 <body>
-    <!-- <div id="alert"> -->
+    <div id="alert">
         <div id="alert-content">
-            <h2>Ola mundo</h2>
+            
         </div>
-    <!-- </div> -->
+    </div>
     <div class="container">
         <div id="image-app">
             <img src="../assets/loginLogo.jpg" alt="Logo" id="logo-img">
