--- a/src/public/views/index.html
+++ b/src/public/views/index.html
@@ -29,5 +29,5 @@
         </div>
     </div>
 </body>
-<script type= "text/javascript" src="../dist/bundle.js"></script>
+<script type= "text/javascript" src="../dist/index.bundle.js"></script>
 </html>
