--- a/src/public/views/settings/status.html
+++ b/src/public/views/settings/status.html
@@ -17,8 +17,9 @@
     </header>
     <div id="container">
         <div id="setting-status">
-            
+
         </div>
     </div>
 </body>
+<script type= "text/javascript" src="../../dist/status.bundle.js"></script>
 </html>
