--- a/src/public/views/settings/status.html
+++ b/src/public/views/settings/status.html
@@ -15,11 +15,28 @@
             </button>
         </div>
     </header>
+
+    <div id="alert">
+        <div id="alert-content">
+            <h3>Dados atualizados com sucesso</h3>
+        </div>
+    </div>
+    
     <div id="container">
+        <div id="input-status">
+            <input type="text" id="input-novo-status" placeholder="Digite o nome do status">
+            <button id="btn-post-status">Cadastrar</button>
+        </div>
         <div id="setting-status">
 
         </div>
+        <div id="btn-submit">
+            <button id="btn-update-status">
+                Finalizar alterações
+            </button>
+        </div>
     </div>
+    
 </body>
 <script type= "text/javascript" src="../../dist/status.bundle.js"></script>
 </html>
