--- a/src/public/views/settings/status.html
+++ b/src/public/views/settings/status.html
@@ -24,7 +24,7 @@
     
     <div id="container">
         <div id="input-status">
-            <input type="text" id="input-novo-status" placeholder="Digite o nome do status">
+            <input type="text" id="input-novo-status" placeholder="Digite o nome do status" required>
             <button id="btn-post-status">Cadastrar</button>
         </div>
         <div id="setting-status">
