--- a/src/public/views/settings/status.html
+++ b/src/public/views/settings/status.html
@@ -27,8 +27,13 @@
             <input type="text" id="input-novo-status" placeholder="Digite o nome do status" required>
             <button id="btn-post-status">Cadastrar</button>
         </div>
-        <div id="setting-status">
 
+        <div id="trash">
+            <h4 id="status-trash">Status inativos</h4>
+        </div>
+        
+        <div id="setting-status">
+            
         </div>
         <div id="btn-submit">
             <button id="btn-update-status">
