--- a/src/public/styles/settings/status.css
+++ b/src/public/styles/settings/status.css
@@ -291,6 +291,21 @@ button[id^="btn-restore"]{
     border: 0;
 }
 
+#alert-empty {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+#back-actives{
+    padding-top: 1vmax;
+    color: rgba(223, 94, 19, 0.863);
+    font-weight: bold;
+}
+
 @media screen and (max-width: 700px) {
     #alert-content {
         width: 80vw;
