feat: change visibility for button submit in status screen

--- a/src/public/styles/settings/status.css
+++ b/src/public/styles/settings/status.css
@@ -108,6 +108,7 @@ button[id^="drop-up"]:hover{
     font-size: 1.2vmax;
     font-weight: bold;
     border-radius: 20px;
+    visibility: hidden;
 }
 
 #popup {
