refactor: change label button submit

--- a/src/public/views/settings/status.html
+++ b/src/public/views/settings/status.html
@@ -37,7 +37,7 @@
         </div>
         <div id="btn-submit">
             <button id="btn-update-status">
-                Finalizar alterações
+                Salvar ordenação
             </button>
         </div>
     </div>
