--- a/src/public/views/home.html
+++ b/src/public/views/home.html
@@ -15,9 +15,8 @@
         </div>
     </header>
     <div id="container">
-        <div id="filters">
-                
-        </div>
+        <div id="filters"></div>
+        <div id="content-page"></div>
     </div> 
 </body>
 <script type= "text/javascript" src="../dist/home.bundle.js"></script>
