--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -18,6 +18,7 @@
     width: 82vw;
     padding: 2vmax 1vmax 2vmax 1vmax;
     display: flex;
+    flex-direction: column;
 }
 
 header {
@@ -95,7 +96,7 @@ div[id^="order"]{
     background-color: rgb(199, 198, 199);
     border-radius: 20px;
     width: 30vw;
-    height: 50vh;
+    height: 20vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -111,10 +112,10 @@ div[id^="order"]:hover {
 }
 
 @media screen and (max-width: 920px) {
-    #content-page {
+    /* #content-page {
         flex-wrap: wrap;
         justify-content: center;
-    }
+    } */
 
     div[id^="order"]{
         font-size: 1.5vmax;
@@ -157,7 +158,7 @@ div[id^="order"]:hover {
 
     #content-page {
         width: 100vw;
-        justify-content: center;
+        align-items: center;
     }
 
     header {
