--- a/src/public/views/home.html
+++ b/src/public/views/home.html
@@ -17,6 +17,9 @@
     <div id="container">
         <div id="filters"></div>
         <div id="content-page"></div>
+        <div id="details">
+            <div id="grid-details"></div>
+        </div>
     </div> 
 </body>
 <script type= "text/javascript" src="../dist/home.bundle.js"></script>
