--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -159,6 +159,18 @@ div[id^="order"]:hover {
     height: 3vmax;
 }
 
+#exit-details {
+    padding: 0.5vmax 1vmax 0 0;
+    display: flex;
+    flex-direction: row;
+    background-color: rgb(199, 198, 199);
+    justify-content: end;
+}
+
+#exit-details h2:hover {
+    cursor: pointer;
+}
+
 @media screen and (max-width: 920px) {
 
     div[id^="order"]{
