--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -204,6 +204,24 @@ div[id^="order"]:hover {
     color: black;
 }
 
+#row-solicitado {
+    display: flex;
+    justify-content: space-between;
+}
+
+#arrow-right:hover {
+    cursor: pointer;
+}
+
+input[id^='input-atendida'] {
+    background-color: rgb(199, 198, 199);
+    margin-left: 1vmax;
+    height: 100%;
+    border: 0;
+    font-size: 1.2vmax;
+    font-weight: bold;
+}
+
 @media screen and (max-width: 920px) {
 
     div[id^="order"]{
