feat: add subscribe page

--- a/src/public/views/home.html
+++ b/src/public/views/home.html
@@ -11,6 +11,7 @@
     <header>
         <div id="menu">
             <button id="pedidos">Pedidos</button>
+            <button id="cadastros">Cadastros</button>
             <button id="parametros">Parametros</button>
         </div>
     </header>
@@ -23,4 +24,5 @@
     </div> 
 </body>
 <script type= "text/javascript" src="../dist/home.bundle.js"></script>
+<script type= "text/javascript" src="../dist/cadastros.bundle.js"></script>
 </html>
