--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -49,6 +49,18 @@ header {
     font-size: 1.5vmax;
 }
 
+#cadastros {
+    background-color: orange;
+    border: 0;
+    color: white;
+    font-weight: bold;
+    font-size: 1.5vmax;
+}
+
+#cadastros:hover {
+    cursor: pointer;
+}
+
 #pedidos:hover {
     cursor: pointer;
 }
@@ -231,8 +243,37 @@ input[id^='input-atendida'] {
     margin-left: 1vmax;
     height: 100%;
     border: 0;
+    width: 5vw;
     font-size: 1.2vmax;
     font-weight: bold;
+}
+
+#value-product {
+    width: 5vw;
+}
+
+#row-solicitado {
+    width: 9vw;
+}
+
+#th-atendida {
+    width: 5vw;
+}
+
+#hd-solicitada {
+    width: 8vw;
+}
+
+#hd-atendida {
+    width: 5vw;
+}
+
+#hd-valor {
+    width: 10vw;
+}
+
+#filter-table:hover {
+    cursor: pointer;
 }
 
 @media screen and (max-width: 920px) {
