--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -276,6 +276,61 @@ input[id^='input-atendida'] {
     cursor: pointer;
 }
 
+#drop-filter {
+    width: 20vw;
+    height: 5vh;
+}
+
+#filters-prod-serv {
+    display: flex;
+    justify-content: space-between;
+    padding: 1vmax;
+}
+
+#input-filter {
+    width: 30vw;
+    height: 7vh;
+    border-radius: 20px;
+    padding: 1vmax;
+}
+
+#btn-filter-prod {
+    background-color: rgb(199, 198, 199);
+    width: 10vw;
+    height: 5vh;
+    font-weight: bold;
+    border-radius: 20px;
+    margin-left: 2vmax;
+}
+
+#btn-filter-prod:hover {
+    cursor: pointer;
+}
+
+#section-pages {
+    display: flex;
+    justify-content: space-between;
+    padding: 0 1.2vmax;
+}
+
+#btn-back-page {
+    background-color: white;
+    border: 0;
+}
+
+#btn-next-page {
+    background-color: white;
+    border: 0;
+}
+
+#btn-back-page:hover {
+    cursor: pointer;
+}
+
+#btn-next-page:hover {
+    cursor: pointer;
+}
+
 @media screen and (max-width: 920px) {
 
     div[id^="order"]{
