feat: add button for filter orders

--- a/src/public/views/home.html
+++ b/src/public/views/home.html
@@ -25,4 +25,5 @@
 </body>
 <script type= "text/javascript" src="../dist/home.bundle.js"></script>
 <script type= "text/javascript" src="../dist/cadastros.bundle.js"></script>
+<script type= "text/javascript" src="../dist/filtros.bundle.js"></script>
 </html>
