--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -100,6 +100,18 @@ h3[id^="filter-status"]:hover{
     cursor: pointer;
 }
 
+#filter-status-search {
+    /* height: 8vh; */
+    background-color: rgb(199, 198, 199);
+    border: 0;
+    font-weight: bold;
+    font-size: 1.3vmax;
+}
+
+#filter-status-search:hover {
+    cursor: pointer;
+}
+
 div[id^="order"]{
     margin: 1vmax;
     padding: 1vmax;
@@ -328,6 +340,31 @@ input[id^='input-atendida'] {
 }
 
 #btn-next-page:hover {
+    cursor: pointer;
+}
+
+#filters-orders-page {
+    width: 100vw;
+    height: 10vh;
+    display: flex;
+    justify-content: space-between;
+}
+
+#drop-filter-order {
+    width: 20vw;
+    height: 5vh;
+}
+
+#btn-filter-order {
+    background-color: rgb(199, 198, 199);
+    width: 10vw;
+    height: 5vh;
+    font-weight: bold;
+    border-radius: 20px;
+    margin-left: 2vmax;
+}
+
+#btn-filter-order:hover {
     cursor: pointer;
 }
 
