--- a/src/public/styles/home.css
+++ b/src/public/styles/home.css
@@ -101,8 +101,8 @@ h3[id^="filter-status"]:hover{
 }
 
 #filter-status-search {
-    /* height: 8vh; */
     background-color: rgb(199, 198, 199);
+    width: 7vw;
     border: 0;
     font-weight: bold;
     font-size: 1.3vmax;
@@ -344,7 +344,7 @@ input[id^='input-atendida'] {
 }
 
 #filters-orders-page {
-    width: 100vw;
+    width: 100%;
     height: 10vh;
     display: flex;
     justify-content: space-between;
@@ -366,6 +366,17 @@ input[id^='input-atendida'] {
 
 #btn-filter-order:hover {
     cursor: pointer;
+}
+
+#table-orders {
+    padding: 1vmax;
+    width: 100%;
+}
+
+#table-orders tr th{
+    border: 1px solid black;
+    text-align: start;
+    padding: 1vmax;
 }
 
 @media screen and (max-width: 920px) {
